--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
   "private": true,
   "scripts": {
     "vercel-build": "cd frontend && npm run build"
+  },
+  "dependencies": {
+    "next": "16.0.3",
+    "react": "19.2.0",
+    "react-dom": "19.2.0"
   }
 }
