--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "notepad-root",
   "private": true,
   "scripts": {
-    "vercel-build": "cd frontend && npm install --legacy-peer-deps && npm run build"
+    "vercel-build": "cd frontend && npm install --legacy-peer-deps && npm run build && cp -R .next ../.next"
   },
   "dependencies": {
     "next": "16.0.3",
